@@ -45,7 +45,6 @@
 		<concat destfile="${min.concat}">
 			<filelist dir="src">
 				<file name="dform.js" />
-				<file name="dform.plugins.js" />
 				<file name="dform.subscribers.js" />
 				<!-- <file name="dform.converters.js" /> -->
 				<file name="dform.extensions.js" />
